119. Pascal's Triangle II